# glue-s3-hosted-dependencies

./: .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  Dockerfile  README.md  backend.tf  glue_connection.tf  glue_job.tf  policy__bucket_policy.tf  policy__glue_access_policy.tf  pyproject.toml  requirements.txt  role__glue_role.tf  s3.tf  ssm.tf  test_upload_whls_to_s3.py  upload_whls_to_s3.py  variables.tf  vpc.tf
glue_scripts/: hello_world.py
